Fix CSS cross-visibility between comps

--- a/src/app/pages/home/home.page.css
+++ b/src/app/pages/home/home.page.css
@@ -84,11 +84,12 @@
 
 }
 
- .dropdown-btn{
+.dropdown-btn{
   font-size: 20px;
   border: none;
- }
-.btn{
+}
+
+.home-btn{
   margin-left: auto;
   margin-right: auto;
   font-size: 17px;
@@ -101,7 +102,7 @@
   box-shadow: 3px 5px rgba(0,0,0,0.7);
 }
 
-.btn:hover {
+.home-btn:hover {
     background-color: rgba(30, 30, 30, 0.6);
     color: white;
     border-color: white;
@@ -139,14 +140,14 @@
  }
 
 
- @media all and  (max-width: 1650px) {
-  .btn {
+ @media all and (max-width: 1650px) {
+  .home-btn {
     width: 150px;
   }
 }
 
-@media all and  (max-width: 1350px) {
-  .btn {
+@media all and (max-width: 1350px) {
+  .home-btn {
     width: 135px;
     margin-left: 5px;
   }
@@ -155,8 +156,8 @@
   }
 }
 
-@media all and  (max-width: 1100px) {
-  .btn {
+@media all and (max-width: 1100px) {
+  .home-btn {
     width: auto;
     font-size: 12px;
   }
