--- a/src/app/pages/login/login.page.css
+++ b/src/app/pages/login/login.page.css
@@ -43,7 +43,7 @@
     margin: 0 10px;
 }
 
-.btn {
+.login-btn {
     width: 100%;
     background: none;
     border: 2px solid;
@@ -55,7 +55,7 @@
     transition: 500ms;
 }
 
-.btn:hover {
+.login-btn:hover {
     background-color: rgba(30, 30, 30, 0.6);
     color: white;
     transition: 500ms;
